--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack-merge": "^0.14.1"
   },
   "dependencies": {
+    "collectionsjs": "^0.3.2",
     "json-loader": "^0.5.4",
     "moment": "^2.14.1",
     "vee-validate": "^2.0.0-beta.10",
