update vuejs and eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,9 @@
         "eslint:recommended",
         "airbnb-base"
     ],
+    "plugins": [
+        "html"
+    ],
     "parserOptions": {
         "sourceType": "module"
     },
