--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.13.2",
+    "clean-webpack-plugin": "^0.1.11",
     "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
-    "eslint": "^3.1.1",
-    "eslint-config-airbnb-base": "^5.0.0",
+    "eslint": "^3.7.1",
+    "eslint-config-airbnb-base": "^5.0.3",
+    "eslint-plugin-html": "^1.5.3",
     "eslint-plugin-import": "^1.12.0",
-    "extract-text-webpack-plugin": "^2.0.0-beta.3",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
     "node-sass": "^3.8.0",
     "prismjs": "^1.5.1",
@@ -31,18 +33,19 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "vue-html-loader": "^1.2.3",
-    "vue-loader": "^9.5.0",
-    "vue-router": "^2.0.0-rc.5",
+    "vue-loader": "^9.5.1",
     "vue-style-loader": "^1.0.0",
-    "webpack": "^2.1.0-beta.22",
-    "webpack-dev-server": "^2.1.0-beta.0",
+    "webpack": "^2.1.0-beta.25",
+    "webpack-dev-server": "^2.1.0-beta.8",
     "webpack-merge": "^0.14.1"
   },
   "dependencies": {
+    "bulma": "^0.2.1",
     "collectionsjs": "^0.3.2",
     "json-loader": "^0.5.4",
     "moment": "^2.14.1",
     "vee-validate": "^2.0.0-beta.12",
-    "vue": "^2.0.0-rc.7"
+    "vue": "^2.0.1",
+    "vue-router": "^2.0.0"
   }
 }
