--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "main.js",
   "scripts": {
     "dev": "webpack-dev-server --inline --hot",
-    "build": "webpack",
-    "prod": "cross-env NODE_ENV=production webpack -p",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "cross-env NODE_ENV=production webpack -p"
   },
   "keywords": [],
   "author": "",
