--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,10 +19,7 @@
             "error",
             4
         ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
+        "linebreak-style": 0,
         "semi": [
             "error",
             "always"
