--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
+    "lint": "eslint --ext .js,.vue src",
     "dev": "webpack-dev-server --inline --hot",
     "build": "cross-env NODE_ENV=production webpack -p"
   },
