--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
     "css-loader": "^0.23.1",
     "eslint": "^3.7.1",
     "eslint-config-airbnb-base": "^5.0.3",
+    "eslint-loader": "^1.5.0",
     "eslint-plugin-html": "^1.5.3",
     "eslint-plugin-import": "^1.12.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
-    "node-sass": "^3.8.0",
+    "node-sass": "^3.10.1",
     "prismjs": "^1.5.1",
     "purecss": "^0.6.0",
-    "sass-loader": "^4.0.0",
+    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "vue-html-loader": "^1.2.3",
