stylus and bulma setup

--- a/package.json
+++ b/package.json
@@ -26,11 +26,10 @@
     "eslint-plugin-import": "^1.12.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
-    "node-sass": "^3.10.1",
-    "prismjs": "^1.5.1",
-    "purecss": "^0.6.0",
-    "sass-loader": "^4.0.2",
+    "poststylus": "^0.2.3",
     "style-loader": "^0.13.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.3.1",
     "url-loader": "^0.5.7",
     "vue-html-loader": "^1.2.3",
     "vue-loader": "^9.5.1",
@@ -42,6 +41,7 @@
   "dependencies": {
     "bulma": "^0.2.1",
     "collectionsjs": "^0.3.2",
+    "highlight.js": "^9.7.0",
     "json-loader": "^0.5.4",
     "moment": "^2.14.1",
     "vee-validate": "^2.0.0-beta.12",
