--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "highlight.js": "^9.7.0",
     "json-loader": "^0.5.4",
     "moment": "^2.14.1",
-    "vee-validate": "2.0.0-beta.13",
+    "vee-validate": "next",
     "vue": "^2.0.1",
     "vue-router": "^2.0.0"
   }
