--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "eslint-plugin-import": "^1.12.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
+    "handlebars": "^4.0.5",
+    "handlebars-loader": "^1.4.0",
+    "html-webpack-plugin": "^2.24.0",
     "poststylus": "^0.2.3",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
